css/roos-roxie.css
/* ... */
@media (max-width:411px) {
	.mainTitleAdjust, #mainTitleAdjust {
		margin-top: 17px;
		font-size: 14px;
	}
	.ROOSbanner {
		max-width:176px;
	}
}


.btn-index {
	margin-top: 10px;
	margin-left: 55px;
	background-color: rgba(255, 255, 255, 0.5);
}


@media (max-width: 767px) {
	.index-slideshow .item {
		height:79vmin;
		max-height: 605px;
	}
	#jumbotron h5 {
		font-size: 4vmin;
	}
}

@media (min-width: 768px) {
	.index-slideshow .item {
		height:605px;
	}
	#jumbotron .index-slideshow h5 {
		font-size: 30.68px;
	}
}

@media (min-width: 991px) {
	.index-slideshow .item {
			height:560px; /*45px difference from above due to titlebar shrinking on mobile*/
	}
}

#index-slide-3 .btn-inverse {background-color: transparent; border-color: #FFF; color: #FFF;}
#index-slide-3 .btn-inverse:hover {background-color: #FFF;}

li[type="disc"] {margin-left: 40px;}
ol[type="1"] {margin-left: 40px;}

.nav.vertical-nav > li:hover {background-color: transparent;} /*overwrites roxie, removes colored background on xs-sm support page links on hover*/
.modal-body .tab-content { background-color: #FFF;}

.catHeadImg {width: auto !important;} /*catalog head images (Fixture, Accessories, Service & Support)*/

@media (max-width: 767px) {
	#eshop .eshop-banner div {
		text-align: center;  /*centers Catalog head images in xs */
	}
}
@media (min-width: 768px) and (max-width: 991px) {
	#eshop .eshop-banner span {
		margin-left: 48px; /*indents catalog head images in sm */
	}
}

.eshop-product a .product-num {
	position: absolute;
    left: 50%;
    bottom: 0;
    transform: translate(-50%,-50%);
	color: #F0F0F0; background-color: rgba(0, 0, 0, 0.5); padding: 0 3px; transition: background-color 0.5s ease;     transition-property: background-color;
    transition-duration: 0.5s;
    transition-timing-function: ease;
    transition-delay: initial;
	font-weight: bold;
	z-index: 1;
	padding: 5px 10px;
	border-radius: .25em;
}

.eshop-product a:hover .product-num {
	background-color: rgba(0, 0, 0, 0.35);
}

#fixtures-sidebar li {
	border: none;
}


#fixtures-sidebar ul {
	border: none;
    background-clip: padding-box;
    -webkit-box-shadow: none;
    box-shadow: none;
	position: relative;
	width: 100%;
	padding: 0; /*dropdown-menu gives padding 5, glitches collapse transition*/
	margin-left: 0;
}

#fixtures-sidebar ul li:last-child {
	margin-bottom: 20px;
}

.changing-chevrons {
	float: left;
	font-family: "FontAwesome";
}


#fixtures-sidebar .collapsed .changing-chevrons:after {
	content:"\f054";
}

#fixtures-sidebar .changing-chevrons:after {
	content: "\f078";
}

#fixtures-sidebar .collapsed .dropdown-menu > li > a {
	transition: none !important;
} /*fixes bug where transition occurs in li after closing Categories, temporarily showing undesired text*/

#fixtures-sidebar .collapsing {
	display: initial !important; /*overwrites dropdown-menu display: none so transition can work while collapsing*/
}

#fixtures-sidebar ul li.dropdown-header {
	text-align: center;
	font-weight: bold;
	position: relative;
	border-bottom: 1px solid #C5C5C5;
	font-size: 16px;
	white-space: normal; /*default is no-wrap, breaks multiple collapsing categories*/
	margin-bottom: 10px;
	cursor: pointer;
}

#fixtures-sidebar ul li.dropdown-header > i {
	float: right;
}

#fixture-sidebar .dropdown-menu > li:last-child {
	margin-bottom: 50px;
}

footer {
	width: 100%;
	position:absolute;
	bottom:0;
}

@media (min-width: 992px) {
  footer {
    width: 1000px;
  }
}

@media (min-width: 1200px) {
  footer {
    width: 1200px;
  }
}

.jumbotron .container {
	margin-left: 5%;
}


.catalogImg {padding: 5px;}

#content {
    background: #FFF;
    position: relative;
    padding-bottom: 295px; /*padding size of footer +30px for space*/
}
 
 
@media (min-width: 768px) {
#content {
    padding-bottom: 369px; /*padding size of footer +40px for space*/
}
}
 
@media (min-width: 992px) {
#content {
    padding-bottom: 399px; /*padding size of footer +50px for space*/
}
}

#eshop .eshop-banner .row > a.active, #latest-work-footer img {
	background-color: #c1cfe0;
}
#eshop .eshop-banner .row > a.active:before {
	background-color: rgba(0, 0, 0, 0);
}

#eshop-slider.owl-carousel .owl-stage-outer {height: 270px;}

@media (max-width:767px) {
	#productImg img {max-height: 175px;}
	.parentbox2 {height: 175px;}
	#productImg .item img {max-width:75px;}
	#eshop-slider.owl-carousel .owl-dots {top: -8px;}
	
}

#eshop-slider.owl-carousel .owl-dots {margin: 31px 0 0 0;}
#eshop-slider.owl-carousel .owl-stage {margin-top: 58px;}

.product-price span {
	float: right;
	padding:8px 8px;
	margin-right:4px;
}
@media (min-width:768px) {
	.eshop-content .kitType:not(:first-of-type) {margin-top:80px;}
}

